--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -9,9 +9,10 @@
     <script>
       window.CMS_MANUAL_INIT = true;
     </script>
-    <script src="config.yml" type="text/yaml"></script>
+    <script src="admin/config.yml" type="text/yaml"></script>
     <script>
       window.CMS.init();
     </script>
   </body>
 </html>
+
