--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -9,8 +9,7 @@
     <script>
       window.CMS_MANUAL_INIT = true;
     </script>
-    <script>
-      window.CMS.init({ config: "/admin/config.yml" });
-    </script>
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </body>
 </html>
+
