--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -8,8 +8,7 @@
   <body>
     <script>
       window.CMS_MANUAL_INIT = true;
+      window.CMS.init({ config: "/admin/config.yml" });
     </script>
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </body>
 </html>
-
